--- a/index.html
+++ b/index.html
@@ -12,15 +12,13 @@
 
 
 
-
-
     <!--Header  section starts*/-->
     <header class="start">
         <nav class="start-top">
             <image class="logo" src="Media/Netflixlogo.png">
             <select>
                 <option value="English">English</option>
-                <option value="Hindi">Hindi</option>
+                <option value="Hindi">हिन्दी</option>
             </select>    
             <button type="submit" class="signin">Sign In</button>
         </nav>
@@ -35,12 +33,6 @@
         </div>
     </header>
       <!--Header  section ends-->
-
-
-
-
-
-
 
 
 
@@ -60,9 +52,10 @@
 
 
 
+ 
 
 
-        
+
     <!-- section2 -->
     <section class="section2">
         <h1>Frequently Asked Questions</h1>
@@ -123,7 +116,7 @@
             <h4>Questions? Call 000-800-040-1843</h4>
             <div class="content">
                 <div class="footleft">
-                    <ul></ul>
+                    <ul>
                     <li><a href="#">FAQ</a></li>
                     <li><a href="#">Investor Relations</a></li>
                     <li><a href="#">Privacy</a></li>
@@ -132,7 +125,7 @@
                     <br><br>
                     <select>
                         <option value="English">English</option>
-                        <option value="Hindi">Hindi</option>
+                        <option value="Hindi">हिन्दी</option>
                     </select>
                     <br><br>
                     <p>Netflix India</p>
