--- a/Answerpages/Question2.html
+++ b/Answerpages/Question2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background:black;color:white;">
+<body style="background:black;color:white;text-align:center;padding-top: 25%;">
     <p>
         Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from USD7.99 to USD14.99 a month. No extra costs, no contracts.
     </p>
