--- a/Answerpages/Question3.html
+++ b/Answerpages/Question3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background:black;color:white;">
+<body style="background:black;color:white;text-align:center;padding-top: 25%;">
 
     <p>
         Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
